[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-intermediate-inflammation"
version = "0.0.0"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["inflammation"]

[tool.poetry.dependencies]
numpy = "^2.4.6"
matplotlib = "^3.10.9"
pytest = "^9.0.3"
